<?xml version="1.0"?>
<package format="2">
  <name>rs_slam</name>
  <version>0.0.0</version>
  <description>rs_slam</description>
  <author>Teng R</author>
  <maintainer email="rantengsky@163.com">rantengsky</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap_rviz_plugins</exec_depend>

</package>
